best-practices-vpol/require-probes/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 7070
      periodSeconds: 20
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 7070
      periodSeconds: 20
  - name: busybox
    image: busybox
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 7070
      periodSeconds: 20
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: asfadsasfasdf:0.1
    startupProbe:
      grpc:
        port: 8888
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
  labels:
    app: myapp
spec:
  initContainers:
  - name: init-setup
    image: registry.k8s.io/goproxy:0.1
    command: ["sh", "-c", "echo setup"]
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  labels:
    app: myapp
spec:
  initContainers:
  - name: sidecar
    image: registry.k8s.io/goproxy:0.1
    restartPolicy: Always
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
  labels:
    app: myapp
spec:
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
  ephemeralContainers:
  - name: debugger
    image: busybox:1.36
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
  labels:
    app: myapp
spec:
  initContainers:
  - name: sidecar
    image: registry.k8s.io/goproxy:0.1
    restartPolicy: Always
    startupProbe:
      tcpSocket:
        port: 9090
      periodSeconds: 10
  containers:
  - name: goproxy
    image: registry.k8s.io/goproxy:0.1
    readinessProbe:
      tcpSocket:
        port: 8080
      periodSeconds: 10
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
            livenessProbe:
              tcpSocket:
                port: 7070
              periodSeconds: 20
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
