best-practices-vpol/require-probes/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-pod-probes
policies:
- ../require-probes.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: require-pod-probes
  resources:
  - badpod01
  - badpod02
  - badpod03
  result: fail
- kind: Pod
  policy: require-pod-probes
  resources:
  - goodpod01
  - goodpod02
  - goodpod03
  - goodpod04
  - goodpod05
  - goodpod06
  - goodpod07
  result: pass
- kind: CronJob
  policy: require-pod-probes
  resources:
  - badcronjob01
  result: fail
- kind: CronJob
  policy: require-pod-probes
  resources:
  - goodcronjob01
  result: pass
